--- a/tox.ini
+++ b/tox.ini
@@ -7,14 +7,14 @@ python =
   3.8: clean,py38,report
 
 [pytest]
-addopts =
-  --durations=5
-  --cov --cov-append --cov-fail-under=10 --cov-report=
-  --mypy
-  --flake8
 ;addopts =
 ;  --durations=5
+;  --cov --cov-append --cov-fail-under=10 --cov-report=
+;  --mypy
 ;  --flake8
+addopts =
+  --durations=5
+  --flake8
 norecursedirs =
   docs
 
