--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ requires = [
     "collections-extended>=1.0.2",
     "python-multipart",
     "Pillow",
-    "plac"
+    "plac",
+    "bs4"
 ]
 dist-name = "sherpa-streamlit"
 
