--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.idea/vcs.xml
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
