--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ requires = [
     "openpyxl==3.0.7",
     "streamlit~=1.2.0",
     "st-annotated-text",
+    "sherpa-client==0.9.19",
     "requests",
     "plac==0.9.6",
     "collections-extended>=1.0.2",
