--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ requires = [
     "python-multipart",
     "Pillow",
     "plac",
-    "bs4"
+    "bs4",
+    "methodtools"
 ]
 dist-name = "sherpa-streamlit"
 
